@@ -348,6 +348,7 @@ The following extensions are migrated into MediaWiki 1.14:
   formatting and path exposure.
 * Less verbose errors from profileinfo.php when not configured
 * Blacklist redirects via Special:Filepath, hard to use.
+* Improved input validation on Special:Import form
 
 
 === API changes in 1.14 ===
